--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,30 +24,30 @@ jobs:
         with:
           url: https://codeberg.org/shaner/mirror-repository-action
           #host: https://codeberg.org
-          #          owner: shaner
-          #          repo: mirror-repository-action
+          #owner: shaner
+          #repo: mirror-repository-action
           username: shaner
           password: ${{ secrets.CODEBERG_TOKEN }}
 
       #- name: "Echo Outputs"
       #  run: |
       #    echo '${{ steps.test.outputs.time }}'
-
-  lint:
-    name: "Lint"
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@v4
-
-      - name: "Setup Python"
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: "Flake8"
-        run: |
-          python -m pip install flake8
-          flake8 src
+#
+#  lint:
+#    name: "Lint"
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 5
+#
+#    steps:
+#      - name: "Checkout"
+#        uses: actions/checkout@v4
+#
+#      - name: "Setup Python"
+#        uses: actions/setup-python@v5
+#        with:
+#          python-version: "3.11"
+#
+#      - name: "Flake8"
+#        run: |
+#          python -m pip install flake8
+#          flake8 src
