--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,8 +3,10 @@ name: "Test"
 on:
   workflow_dispatch:
   push:
-#    tags:
-#      - "*"
+    branches:
+      - "**"
+    tags:
+      - "**"
 
 jobs:
   test:
